# sMDT_MiniDAQ

./: .gitignore  .gitmodules  README.md
smdt-reco/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  rerunmc.sh  rootlogon.C  setup.sh
smdt-reco/MuonReco/: ArgParser.h  Callable.h  Chebyshev.h  Cluster.h  ConfigParser.h  Event.h  EventDisplay.h  EventID.h  Geometry.h  Hit.h  IOUtility.h  Observable.h  Optimizer.h  ParameterSet.h  Parameterization.h  RTAggregator.h  RTLinInterpParam.h  RTParam.h  RecoObject.h  RecoUtility.h  ResolutionResult.h  Signal.h  T0Fit.h  T0Reader.h  TimeCorrection.h  Track.h  TrackParam.h  TubeMap.cxx  TubeMap.h
smdt-reco/MuonSim/: G4DriftTubeHit.h  G4DriftTubeSD.h  G4TCActionInitialization.h  G4TCEventAction.h  G4TCPrimaryGeneratorAction.h  G4TCRunAction.h  G4TCSteppingAction.h  G4TestStandConstruction.h  GasMonitorRTStrategy.h  MCTruthRecoStrategy.h  ReconstructionStrategy.h  RootIO.h  SignalPropagationStrategy.h  SmearPositionStrategy.h
smdt-reco/conf/: BIS1.conf  BIS2-6.conf  mc_run000.conf  mc_run001.conf  mc_run002.conf  mc_run003.conf  mc_run004.conf  mc_run005.conf  mc_run006.conf  mc_run007.conf  mc_run008.conf  mc_run009.conf  mc_run010.conf  mc_run011.conf  mc_run012.conf  mc_run013.conf  mc_run014.conf  mc_run015.conf  newTDC_paper.conf  run187691.conf  run187846.conf  run187903.conf  run187939.conf  run187982.conf  run187984.conf  run187985.conf  run188192.conf  run188193.conf  run188194.conf  run188489.conf  run188512.conf  run188566.conf  run188566_1.conf  run188566_2.conf  run188566_3.conf  run188566_4.conf  run188566_5.conf  run188566_eff.conf  run188734.conf  run191328.conf  (+15 more)
smdt-reco/conf/depreciated/: run187691.conf  run187846.conf  run187903.conf  run187939.conf  run187982.conf  run187984.conf  run187985.conf  run188192.conf  run188193.conf  run188194.conf  run188411.conf  run188436.conf  run188487.conf  run188489.conf  run188512.conf  run188734.conf  run190816.conf  run190836.conf  run190880.conf  run191029.conf  run191040.conf  run191069.conf  run191129.conf  run191129_eff.conf  run191176.conf  run191222.conf  run191222_eff.conf  run191222_fullcheby.conf  run191222_fulltdc.conf  run191222_withmeta.conf  run191241.conf  run1912412.conf  run1912413.conf  run191241_eff.conf  run191335.conf  run191353.conf  run191375.conf  run191433.conf  run191435.conf  run191436.conf  (+12 more)
smdt-reco/run/: ADC_plots.cxx  AutoCalibration.cxx  DecodeRawData.cxx  DoT0Fit.cxx  Efficiency.cxx  GetTubeT0.cxx  MakeDBFile.cxx  ProduceRT_txt.cxx  RT_ML.cxx  RawFileReader.cxx  Residuals.cxx  Resolution.cxx  RunBeam.cxx  RunEventDisplay.cxx  ShowChamberGeometry.cxx  SigPropBias.cxx  SignalTraces.cxx  Tomography.cxx  TubeAutoCal.cxx  TwoRTAutoCalibration.cxx  TwoRTResolution.cxx  calibrateAndResolution.sh  compareRT.cxx  eff.sh  fullMCRun.sh  fullRun.sh  liveEventDisplay.sh  nominal_res.cxx  patternRecog.cxx  plotActive.cxx  plotrt.cxx  plots.cxx  raw_to_efficiency.sh  raw_to_resolution.sh  showTracks.cxx  systematics.sh  testOpt.cxx  timeCorrection.sh
smdt-reco/run/AtlasStyle/: AtlasStyle.C  README  version
smdt-reco/src/python/: pfn_muon.py  readTree.py  run.sh
smdt-reco/src/reco/: ArgParser.cxx  Chebyshev.cxx  Cluster.cxx  ConfigParser.cxx  Event.cxx  EventDisplay.cxx  EventID.cxx  Geometry.cxx  Hit.cxx  IOUtility.cxx  LinkDef.h  Signal.cxx  (+14 more)
(+1884 files in other folders)
